<resources>
    <string name="app_name">Тренажёр для начальной школы</string>
    <string name="maths"><b><i>Математика</i></b></string>
    <string name="and"><b><i>и</i></b></string>
    <string name="rus"><b><i>Русский язык</i></b></string>
    <string name="sch"><i>Счёт</i></string>
    <string name="slo"><i>Словарные слова</i></string>
    <string name="otv"><b>Ответить</b></string>
    <string name="ver"></string>
    <string name="ver2"></string>
    <string name="example"><i></i></string>
    <string name="example2"><i>Выбери правильный ответ</i></string>
    <string name="score">Результат: </string>
    <string name="verno">Верно!</string>
    <string name="notright">Неправильно! Попробуй снова</string>
    <string name="z">Вы ничего не выбрали</string>
    <string name="q">Пустое поле</string>
    <string name="cat1">Слова от А-В</string>
    <string name="cat2">Слова от В-Е</string>
    <string name="cat3">Слова от Ж-М</string>
    <string name="cat4">Слова от М-Р</string>
    <string name="cat5">Слова от Р-Я</string>
</resources>