<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/rus2"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Choice">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat1"
        android:backgroundTint="#FF0000"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:id="@+id/cat1"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat2"
        android:layout_margin="10dp"
        android:backgroundTint="#0000FF"
        android:textColor="@color/white"
        android:id="@+id/cat2"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat3"
        android:layout_margin="10dp"
        android:backgroundTint="#008000"
        android:textColor="@color/white"
        android:id="@+id/cat3"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/cat4"
        android:backgroundTint="#f3da0b"
        android:textColor="@color/white"
        android:id="@+id/cat4"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/cat5"
        android:textColor="@color/white"
        android:id="@+id/cat5"/>

</LinearLayout>