<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/school"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="25dp"
            android:textColor="#000000"
            android:typeface="serif"
            android:text="@string/maths" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="25dp"
            android:typeface="serif"
            android:text="@string/and"  />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="25dp"
            android:typeface="serif"
            android:text="@string/rus"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center">
    <Button
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3574e8"
        android:padding="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/sch"
        android:typeface="normal"
        android:id="@+id/count"
        />
    <Button
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#d70000"
        android:id="@+id/words"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:typeface="normal"
        android:text="@string/slo"
        />
    </LinearLayout>

</LinearLayout>