<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mats_page2"
    android:orientation="vertical"
    tools:context=".Maths">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="125dp"
    android:gravity="center">
    <TextView
        android:id="@+id/verdict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:typeface="serif" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:textSize="25dp"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:id="@+id/example"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:id="@+id/input"
        />
    <Button
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:id="@+id/answer_button"
        android:backgroundTint="#65639b"
        android:text="@string/otv"/>
    </LinearLayout>
</LinearLayout>